--- a/notebooks/Day 4.ipynb
+++ b/notebooks/Day 4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,20 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Card   1:  8 86 59 90 68 52 55 24 37 69 | 10 55  8 86  6 62 69 68 59 37 91 90 24 22 78 61 58 89 52 96 95 94 13 36 81'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_4[0]"
    ]
@@ -245,7 +234,9 @@
     "        n_matches = matches[i]\n",
     "        for j in range(n_matches):\n",
     "            # Add card_numbers[i] new copies of the next n_matches cards\n",
-    "            card_numbers[i+1+j] += card_numbers[i]\n",
+    "            # Check that we aren't going off the end of the cards too\n",
+    "            if i+1+j < n_cards:\n",
+    "                card_numbers[i+1+j] += card_numbers[i]\n",
     "    \n",
     "    return sum(card_numbers)"
    ]
