Add further reading to post 9

--- a/notebooks/Day 9.ipynb
+++ b/notebooks/Day 9.ipynb
@@ -170,6 +170,22 @@
    "source": [
     "So the answer to part 2 is: __1091__."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Further reading:\n",
+    "- [Vandemonde matrix](https://en.wikipedia.org/wiki/Vandermonde_matrix) - casting the polynomial interpolation as a linear algebra problem, solved by inverting the Vandemonde matrix. More widely applicable, to cases where the input points aren't easily spaced.\n",
+    "- [Lagrange polynomials](https://en.wikipedia.org/wiki/Lagrange_polynomial) and [Newton polynomials](https://en.wikipedia.org/wiki/Newton_polynomial) - two sets of polynomial basis functions, which put the Vandemonde in unit matrix/lower triangular form respectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
