Fix outputs on day 9

--- a/notebooks/Day 8.ipynb
+++ b/notebooks/Day 8.ipynb
@@ -268,7 +268,6 @@
     "visited = {}\n",
     "next_nodes = {}\n",
     "cycle_lengths = {}\n",
-    "# tails = {}\n",
     "Z = {}\n",
     "for start_node in start_nodes:\n",
     "    vis, k = compute_visited(start_node, instructions, maps)\n",
@@ -307,7 +306,7 @@
     "        intersection = set(visited[n1]).intersection(set(visited[n2]))\n",
     "        if len(intersection) > 0:\n",
     "            matches.append((n1, n2))\n",
-    "print(matches)"
+    "matches"
    ]
   },
   {
@@ -319,25 +318,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('DLZ', 0)]\n",
-      "[('RGZ', 0)]\n",
-      "[('BGZ', 0)]\n",
-      "[('ZZZ', 0)]\n",
-      "[('NTZ', 0)]\n",
-      "[('HBZ', 0)]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[[('DLZ', 0)],\n",
+       " [('RGZ', 0)],\n",
+       " [('BGZ', 0)],\n",
+       " [('ZZZ', 0)],\n",
+       " [('NTZ', 0)],\n",
+       " [('HBZ', 0)]]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for start_node in start_nodes:\n",
-    "    print([state for state in visited[start_node] if state[0][2] == 'Z'])"
+    "[[state for state in visited[start_node] if state[0][2] == 'Z'] for start_node in start_nodes]"
    ]
   },
   {
