--- a/notebooks/Day 8.ipynb
+++ b/notebooks/Day 8.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In [today's puzzle](https://adventofcode.com/2023/day/8), we are considering a collection of nodes labelled by three-letter codes (from 'AAA' to 'ZZZ'), and maps describing how these nodes are connected. From each node, a left ('L') or right ('R') turn maps to a new node, determined by the puzzle input. Also provided is a list of instructions, consisting of a sequence of 'L' and 'R' characters.\n",
+    "In [today's puzzle](https://adventofcode.com/2023/day/8), we are considering a collection of nodes labelled by three-letter codes (from $AAA$ to $ZZZ$), and maps describing how these nodes are connected. From each node, a left ('L') or right ('R') turn maps to a new node, determined by the puzzle input. Also provided is a list of instructions, consisting of a sequence of 'L' and 'R' characters.\n",
     "\n",
     "First, extract the instructions and the maps from the input file:"
    ]
@@ -62,16 +62,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'L': 'DCX', 'R': 'FDP'}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "maps = {}\n",
     "for line in map_lines:\n",
     "    s = line.split()\n",
     "    k = s[0]\n",
     "    v = {'L': s[2][1:-1], 'R': s[3][:-1]}\n",
-    "    maps[k] = v"
+    "    maps[k] = v\n",
+    "maps['AAA']"
    ]
   },
   {
@@ -135,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the second part, we need to track not just the 'AAA' node, but also all the other nodes ending in 'A', of which there are 6:"
+    "In the second part, we need to track not just the $AAA$ node, but also all the other nodes ending in 'A', of which there are 6:"
    ]
   },
   {
